--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <link rel="stylesheet" href="css/myCo.css">
-    <body>
+    <body style="background-color: rgba(191, 191, 191, 0.34);">
 <div id="header"></div>
      <!--   <p>Hello world! This is HTML5 Boilerplate.</p>-->
 <div class="carDiv">
@@ -37,24 +37,24 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active" style="">
-            <img class="d-block img-fluid" src="img/car.png" alt="First slide">
+            <img class="d-block img-fluid" src="img/mobile.jpg" alt="First slide">
         </div>
         <div class="item">
-            <img class="d-block img-fluid" src="img/car.png" alt="Second slide">
+            <img class="d-block img-fluid" src="img/iot.jpg" alt="Second slide">
         </div>
         <div class="item">
-            <img class="d-block img-fluid"  src="img/car.png" alt="Third slide">
+            <img class="d-block img-fluid"  src="img/big_data.png" alt="Third slide">
         </div>
         <div class="item">
-            <img class="d-block img-fluid"  src="img/car.png" alt="Third slide">
+            <img class="d-block img-fluid"  src="img/app.jpg" alt="Fourth slide">
         </div>
         <div class="item">
-            <img class="d-block img-fluid"  src="img/car.png" alt="Third slide">
+            <img class="d-block img-fluid"  src="img/app2.jpg" alt="Fifth slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -67,27 +67,23 @@
     </a>
 </div>
 </div>
-    <div class="row">
-        <div class="col-xs-6 col-md-3">
+    <div class="row" style="width: 100%;">
+        <div class="col-sm-6 col-md-4">
             <a href="#" class="thumbnail">
-                <img src="img/car.png" alt="">
+                <img src="img/mobile-thumb.png" alt="">
             </a>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-sm-6 col-md-4">
             <a href="#" class="thumbnail">
-                <img src="img/car.png" alt="...">
+                <img src="img/iot-thumb.jpg" alt="">
             </a>
         </div>
-        <div class="col-xs-6 col-md-3">
-            <a href="#" class="thumbnail">
-                <img src="img/car.png" alt="...">
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail" >
+                <img src="img/bigdata-thumb.jpg" alt=""  style="height: 229px;width:100%">
             </a>
         </div>
-        <div class="col-xs-6 col-md-3">
-            <a href="#" class="thumbnail">
-                <img  src="img/car.png" alt="...">
-            </a>
-        </div>
+
 </div>
     <div id="footer"></div>
     </body>
