Adding Twitter Feed

--- a/src/index.html
+++ b/src/index.html
@@ -80,11 +80,13 @@
         </div>
         <div class="col-sm-6 col-md-4">
             <a href="#" class="thumbnail" >
-                <img src="img/bigdata-thumb.jpg" alt=""  style="height: 229px;width:100%">
+                <img src="img/bigdata-thumb.jpg" alt=""  style="height: 229px;width:100%;">
             </a>
         </div>
 
 </div>
-    <div id="footer"></div>
+    <div id="footer">
+
+    </div>
     </body>
 </html>
