--- a/src/footer.html
+++ b/src/footer.html
@@ -6,7 +6,27 @@
                 <img alt="Brand" src="img/footer.png" style="width: 57px;height: 25px;">
             </a>
         </div>
+        <div class="navbar-header">
+            <a class="navbar-brand">
+              <div style="width: 1095px;
+    height: 126%;
+    background-color: white;" id="changeText">
 
-
+              </div>
+            </a>
+        </div>
+        <script type="text/javascript">
+            var text = ["@iPhone_News : More Samsung Galaxy Tab S3 review: Android's expensive iPad killer"
+                , "@impetustech :Market Momentum positions @impetustech  to lead #BigData market in 2017",
+                "@iotworldnews  :5 ways the Internet of Things can help #insurance companies retain their competitive edge."];
+            var counter = 0;
+            var elem = document.getElementById("changeText");
+            setInterval(change, 3000);
+            function change() {
+                elem.innerHTML = text[counter];
+                counter++;
+                if(counter >= text.length) { counter = 0; }
+            }
+        </script>
     </div><!-- /.container-fluid -->
 </nav>
