--- a/src/header.html
+++ b/src/header.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../src/index.html">
                 <img alt="Brand" src="img/logo.jpg">
             </a>
         </div>
@@ -10,21 +10,26 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-top: 33px;">
             <ul class="pull-right nav navbar-nav">
-                <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="../src/index.html">Home <span class="sr-only">(current)</span></a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
+                        <li><a href="../src/mobile.html">Mobile</a></li>
+                        <li><a href="../src/bigdata.html">Big Data</a></li>
+                        <li><a href="../src/iot.html">IOT</a></li>
                     </ul>
                 </li>
-                <li><a href="#">About Us</a></li>
+                <li class="dropdown">
+                    <a href="../src/aboutus.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="../src/mobile.html">Management</a></li>
+                        <li><a href="../src/bigdata.html">Code Of Conduct</a></li>
+                        <li><a href="../src/iot.html">Business Process</a></li>
+                        <li><a href="../src/iot.html">Locations</a></li>
+                        <li><a href="../src/iot.html">Contacts</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">Blog</a></li>
             </ul>
 
