--- a/src/bigdata.html
+++ b/src/bigdata.html
@@ -32,6 +32,49 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <link rel="stylesheet" href="css/myCo.css">
+<script>
+    $(document).ready(function(){
+        $('#brochureDownload').on('click',function (e) {
+            $.ajax({
+                type : "POST",
+                data :{
+                    "fname" : $("#fname").val(),
+                    "lname" : $('#lname').val(),
+                    "email" : $('#email').val()
+                },
+                url : "/brochuredata",
+                success : function(data){
+                    if(data.statusCode == 402)
+                    {
+                        alert("Successful");
+                    }
+                }
+
+            });
+        });
+    });
+
+    $(document).ready(function(){
+        $('#paperdownload').on('click',function (e) {
+            $.ajax({
+                type : "POST",
+                data :{
+                    "fname" : $("#fname").val(),
+                    "lname" : $('#lname').val(),
+                    "email" : $('#email').val()
+                },
+                url : "/paperdata",
+                success : function(data){
+                    if(data.statusCode == 402)
+                    {
+                        alert("Successful");
+                    }
+                }
+
+            });
+        });
+    });
+</script>
 <body>
 <div id="header"></div>
 
@@ -65,7 +108,7 @@
                                         Email
                                         <input type="email" class="form-control" id="email" placeholder="Email" />
                                     </div>
-                                    <button class="btn btn-success">Download</button>
+                                    <button id="brochureDownload" type="submit" class="btn btn-success">Download</button>
                                     <button class="btn btn-default">Cancel</button>
                                 </form>
                             </div>
@@ -101,7 +144,7 @@
                                        Email
                                         <input type="email" class="form-control" id="email1" placeholder="Email" />
                                     </div>
-                                    <button class="btn btn-success">Download</button>
+                                    <button id = "paperdownload" type="submit" class="btn btn-success">Download</button>
                                     <button class="btn btn-danger">Cancel</button>
                                 </form>
                             </div>
