--- a/src/header.html
+++ b/src/header.html
@@ -1,13 +1,11 @@
 <nav class="navbar navbar-inverse" style="height: 133px;">
     <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <a class="navbar-brand" href="../src/index.html">
                 <img alt="Brand" src="img/logo.jpg">
             </a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-top: 33px;">
             <ul class="pull-right nav navbar-nav">
                 <li class="active"><a href="../src/index.html">Home <span class="sr-only">(current)</span></a></li>
@@ -17,17 +15,17 @@
                     <ul class="dropdown-menu">
                         <li><a href="../src/mobile.html">Mobile</a></li>
                         <li><a href="../src/bigdata.html">Big Data</a></li>
-                        <li><a href="../src/iot.html">IOT</a></li>
+                        <li><a href="../src/internetofthings.html">IOT</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="../src/aboutus.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="../src/mobile.html">Management</a></li>
-                        <li><a href="../src/bigdata.html">Code Of Conduct</a></li>
+                        <li><a href="#">Code Of Conduct</a></li>
                         <li><a href="../src/iot.html">Business Process</a></li>
-                        <li><a href="../src/iot.html">Locations</a></li>
-                        <li><a href="../src/iot.html">Contacts</a></li>
+                        <li><a href="../src/locations.html.html">Locations</a></li>
+                        <li><a href="#">Contacts</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Blog</a></li>
