abhay linkedin image

--- a/src/management.html
+++ b/src/management.html
@@ -67,7 +67,7 @@
                                         <h4 style="color: darkgoldenrod">Ishan Pandya</h4><br>
                                         <b>CEO Founder</b><br><br><br>
                                         <div>
-                                            <a href="https://www.linkedin.com/in/ishan-pandya/" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="http://www.iconsdb.com/icons/preview/orange/linkedin-3-xxl.png" width="30" height="30"  style="vertical-align:middle;" border="0">&nbsp;</span></a>
+                                            <a href="https://www.linkedin.com/in/ishan-pandya/" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="img/linkedin.png" width="30" height="30"  style="vertical-align:middle;" border="0">&nbsp;</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -93,7 +93,7 @@
                                         <h4 style="color: darkgoldenrod">Abhay Pendawle</h4><br>
                                         <b>CTO</b><br><br><br>
                                         <div>
-                                            <a href="https://www.linkedin.com/in/pendawleabhay/" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="http://www.iconsdb.com/icons/preview/orange/linkedin-3-xxl.png" width="30" height="30"  style="vertical-align:middle;" border="0">&nbsp;</span></a>
+                                            <a href="https://www.linkedin.com/in/pendawleabhay/" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="img/linkedin.png" width="30" height="30"  style="vertical-align:middle;" border="0">&nbsp;</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -119,7 +119,7 @@
                                         <h4 style="color: darkgoldenrod">Chinmay Dhamankar</h4><br>
                                         <b>CFO</b><br><br><br>
                                         <div>
-                                            <a href="https://www.linkedin.com/in/chinmaydhamankar/" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="http://www.iconsdb.com/icons/preview/orange/linkedin-3-xxl.png" width="30" height="30"  style="vertical-align:middle;" border="0">&nbsp;</span></a>
+                                            <a href="https://www.linkedin.com/in/chinmaydhamankar/" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="img/linkedin.png" width="30" height="30"  style="vertical-align:middle;" border="0">&nbsp;</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -147,7 +147,7 @@
                                         <h4 style="color: darkgoldenrod">Shailesh Yedge</h4><br>
                                         <b>Director</b><br><br><br>
                                         <div>
-                                            <a href="https://www.linkedin.com/in/syedge/" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="http://www.iconsdb.com/icons/preview/orange/linkedin-3-xxl.png" width="30" height="30"  style="vertical-align:middle;" border="0">&nbsp;</span></a>
+                                            <a href="https://www.linkedin.com/in/syedge/" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="img/linkedin.png" width="30" height="30"  style="vertical-align:middle;" border="0">&nbsp;</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -173,7 +173,7 @@
                                         <h4 style="color: darkgoldenrod">Mansi Sogani</h4><br>
                                         <b>COO</b><br><br><br>
                                         <div>
-                                            <a href="https://www.linkedin.com/in/mansi-sogani/" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="http://www.iconsdb.com/icons/preview/orange/linkedin-3-xxl.png" width="30" height="30"  style="vertical-align:middle;" border="0">&nbsp;</span></a>
+                                            <a href="https://www.linkedin.com/in/mansi-sogani/" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="img/linkedin.png" width="30" height="30"  style="vertical-align:middle;" border="0">&nbsp;</span></a>
                                         </div>
                                     </div>
                                 </div>
