--- a/src/header.html
+++ b/src/header.html
@@ -19,9 +19,9 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="../src/aboutus.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
+                    <a href="../src/management.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../src/mobile.html">Management</a></li>
+                        <li><a href="management.html">Management</a></li>
                         <li><a href="#">Code Of Conduct</a></li>
                         <li><a href="../src/iot.html">Business Process</a></li>
                         <li><a href="../src/locations.html.html">Locations</a></li>
