--- a/src/header.html
+++ b/src/header.html
@@ -28,7 +28,7 @@
                         <li><a href="#">Contacts</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
 
 
