--- a/src/header.html
+++ b/src/header.html
@@ -13,7 +13,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../src/mobile.html">Mobile</a></li>
+                        <li><a href="#">Mobile</a></li>
                         <li><a href="../src/bigdata.html">Big Data</a></li>
                         <li><a href="../src/internetofthings.html">IOT</a></li>
                     </ul>
@@ -24,7 +24,7 @@
                         <li><a href="management.html">Management</a></li>
                         <li><a href="#">Code Of Conduct</a></li>
                         <li><a href="../src/iot.html">Business Process</a></li>
-                        <li><a href="../src/locations.html.html">Locations</a></li>
+                        <li><a href="../src/locations.html">Locations</a></li>
                         <li><a href="#">Contacts</a></li>
                     </ul>
                 </li>
